# serial_video

./: CMakeLists.txt  LICENSE  README.md  avdecoder.cpp  avdecoder.hpp  fft.cpp  gray2bw.cpp  main.cpp  transfer.cpp  transfer.hpp
cmake/: Findfftw3.cmake  Findlibav.cmake
include/serial_video/: fft.hpp  gray2bw.hpp
serial_video/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  avdecoder.cpp  fft.cpp  gray2bw.cpp  transfer.cpp
